--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,73 @@
 absl-py==1.4.0
 aiofiles==22.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
 aiosqlite==0.18.0
 albumentations==1.3.0
+antlr4-python3-runtime==4.8
 anyio==3.6.2
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
+async-timeout==4.0.2
 attrs==22.2.0
+autocfg==0.0.8
 av==10.0.0
+awscli==1.27.130
+awscli-plugin-endpoint==0.4
 Babel==2.11.0
 backcall==0.2.0
+batchgenerators==0.25
 beautifulsoup4==4.11.2
 betty-ml==0.2.0
 bleach==6.0.0
-boto3==1.26.77
-botocore==1.29.77
+boto3==1.26.130
+botocore==1.29.130
 cachetools==5.3.0
+certifi @ file:///croot/certifi_1671487769961/work/certifi
 cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==3.0.1
 clean-fid==0.1.35
 click==8.1.3
+cmake==3.26.3
+colorama==0.4.4
 comm==0.1.2
 contourpy==1.0.7
 cycler==0.11.0
-Cython==0.29.33
+Cython==0.29.34
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
-diskcache==5.4.0
+dill==0.3.6
+diskcache==5.6.1
+dlib==19.24.1
 docker-pycreds==0.4.0
+docutils==0.16
+dominate==2.7.0
+efficientnet-pytorch==0.7.1
+einops==0.6.0
 executing==1.2.0
 face-alignment==1.3.5
 fastjsonschema==2.16.2
 filelock==3.9.0
 fonttools==4.38.0
 fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2023.3.0
+ftfy==6.1.1
+future==0.18.3
 gitdb==4.0.10
 GitPython==3.1.31
 google-auth==2.16.1
-google-auth-oauthlib==0.4.6
+google-auth-oauthlib==1.0.0
+graphviz==0.8.4
 grpcio==1.51.3
-huggingface-hub==0.12.1
-idna==3.4
+h5py==3.8.0
+huggingface-hub==0.11.1
+idna==2.10
 imageio==2.25.1
 imageio-ffmpeg==0.4.8
 imgaug==0.4.0
@@ -74,20 +98,26 @@ jupyterlab==3.6.1
 jupyterlab-pygments==0.2.2
 jupyterlab_server==2.19.0
 kiwisolver==1.4.4
+libtiff==0.4.2
+lightning-utilities==0.8.0
+linecache2==1.0.0
 llvmlite==0.39.1
-lmdb==1.4.0
+lmdb==1.4.1
 lpips==0.1.4
 Markdown==3.4.1
 MarkupSafe==2.1.2
 matplotlib==3.7.0
 matplotlib-inline==0.1.6
+MedPy==0.4.0
 mistune==2.0.5
+multidict==6.0.4
 nbclassic==0.5.2
 nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
 nest-asyncio==1.5.6
 networkx==3.0
+nibabel==5.0.1
 ninja==1.11.1
 notebook==6.5.2
 notebook_shim==0.2.2
@@ -99,7 +129,10 @@ nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
 nvidia-ml-py3==7.352.0
 oauthlib==3.2.2
-opencv-python==4.3.0.38
+omegaconf==2.1.1
+open-clip-torch==2.16.0
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
 opencv-python-headless==4.7.0.72
 packaging==23.0
 pandas==1.5.3
@@ -108,9 +141,11 @@ parso==0.8.3
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.4.0
+Pillow==9.5.0
+pixelssl==0.1.4
 pkgutil_resolve_name==1.3.10
 platformdirs==3.0.0
+portalocker==2.7.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.37
 protobuf==3.19.6
@@ -120,62 +155,79 @@ pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-pyglet==2.0.4
+pyDeprecate==0.3.1
+pydicom==2.3.1
+pyglet==2.0.7
 Pygments==2.14.0
 pynvml==11.5.0
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+pytorch-fid==0.3.0
+pytorch-ignite==0.4.12
+pytorch-lightning==1.5.0
 pytz==2022.7.1
 PyWavelets==1.4.1
-PyYAML==6.0
+PyYAML==5.4.1
 pyzmq==25.0.0
 qimage2ndarray==1.10.0
 qudida==0.0.4
 regex==2022.10.31
-requests==2.28.2
+requests==2.25.1
 requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rsa==4.9
+rsa==4.7.2
 s3transfer==0.6.0
-scikit-image==0.19.3
+scikit-image==0.18.3
 scikit-learn==1.2.1
-scipy==1.10.1
+scipy==1.3.3
+segment-anything @ git+https://github.com/facebookresearch/segment-anything.git@9e8f1309c94f1128a6e5c047a10fdcb02fc8d651
 Send2Trash==1.8.0
+sentencepiece==0.1.97
 sentry-sdk==1.15.0
 setproctitle==1.3.2
 shapely==2.0.1
+SimpleITK==2.2.1
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4
 stack-data==0.6.2
-tensorboard==2.12.0
+tensorboard==2.13.0
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
+tensorboardX==2.6
 terminado==0.17.1
 threadpoolctl==3.1.0
 tifffile==2023.2.3
+timm==0.6.13
 tinycss2==1.2.1
 tokenizers==0.13.2
 tomli==2.0.1
 torch==1.13.1
+torch-fidelity==0.3.0
+torchmetrics==0.11.4
 torchvision==0.14.1
 tornado==6.2
-tqdm==4.64.1
+tqdm==4.35.0
+traceback2==1.4.0
 traitlets==5.9.0
 transformers==4.26.1
 typing_extensions==4.5.0
+unittest2==1.1.0
 uri-template==1.2.0
 urllib3==1.26.14
-wandb==0.13.10
+wandb==0.15.2
 wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.5.1
 Werkzeug==2.2.3
+wget==3.2
 y-py==0.5.9
+yacs==0.1.8
+yarl==1.8.2
 ypy-websocket==0.8.2
 zipp==3.14.0
